--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.1) noble; urgency=medium
+
+  * Added missing zero
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 22 Oct 2025 15:09:52 +0200
+
 client-register (1.0) noble; urgency=medium
 
   * Initial release.
