--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.3) noble; urgency=medium
+
+  * Fixed cart selection
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 23 Oct 2025 09:18:17 +0200
+
 client-register (1.0.2) noble; urgency=medium
 
   * Fixed text to confirm changes in cli
