--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.4) noble; urgency=medium
+
+  * Checked cart value before set
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 31 Oct 2025 10:11:45 +0100
+
 client-register (1.0.3) noble; urgency=medium
 
   * Fixed cart selection
