--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.6) noble; urgency=medium
+
+  * Forced restart of sync_on_server_ready when cart is changed
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 31 Oct 2025 13:15:12 +0100
+
 client-register (1.0.5) noble; urgency=medium
 
   * Fixed response when get current cart
