--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.7) noble; urgency=medium
+
+  * Fixed reload of sync-on-server-ready
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 03 Nov 2025 10:27:02 +0100
+
 client-register (1.0.6) noble; urgency=medium
 
   * Forced restart of sync_on_server_ready when cart is changed
