--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.8) noble; urgency=medium
+
+  * Changed method to restart sync-on-server-ready
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 04 Nov 2025 08:51:44 +0100
+
 client-register (1.0.7) noble; urgency=medium
 
   * Fixed reload of sync-on-server-ready
