--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+client-register (1.0.10) noble; urgency=medium
+
+  * Fixed url to access wiki article
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 13 Nov 2025 13:58:48 +0100
+
 client-register (1.0.9) noble; urgency=medium
 
   * Changed to enable use if CONTROLLED_CLASSROOM is empty
