--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+client-register (1.0.11) noble; urgency=medium
+
+  * Fixed custom dialog template
+  * Catched error when run application in incorrect system configuration
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Thu, 27 Nov 2025 10:29:09 +0100
+
 client-register (1.0.10) noble; urgency=medium
 
   * Fixed url to access wiki article
